--- a/src/index.css
+++ b/src/index.css
@@ -119,3 +119,16 @@ a {
   font-size: 16px;
   width: 80%;
 }
+
+.reset {
+  border: none;
+  background: transparent;
+  color: #d0021b;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.reset:hover {
+  cursor: pointer;
+}
